# test-framework

./: ansible.md
integration-framework-full-2/: .gitignore  README.md  pytest.ini
integration-framework-stub-2/: .gitignore  README.md  pytest.ini
test2/integration-framework-example/: README.md  pyproject.toml
test2/integration-framework-example/ansible/inventory/: generated.ini
test2/integration-framework-example/ansible/playbooks/: site.yml
test2/integration-framework-example/configs/generated-example/: inventory.ini  master-config.json
test2/integration-framework-example/configs/systems/: product1-product2.yaml
test2/integration-framework-example/docs/: infra-flow.md
test2/integration-framework-example/framework/: __init__.py
test2/integration-framework-example/framework/config/: __init__.py  loader.py  models.py
test2/integration-framework-example/framework/infra/: __init__.py  ansible.py  cloudstack.py
test2/integration-framework-example/framework/media/: __init__.py  gstreamer.py
test2/integration-framework-example/framework/network/: __init__.py  capture.py
test2/integration-framework-example/framework/products/: __init__.py  base.py
test2/integration-framework-example/framework/products/product1/: __init__.py  backend.py  product.py  ui.py  verify.py
test2/integration-framework-example/framework/ui/: __init__.py  browser.py
test2/integration-framework-example/tests/: conftest.py
test2/integration-framework-example/tests/products/product1/: test_suite_1.py
testing/: ANSIBLE_DEPLOYMENT.md  BLACK_BOX_PROBES.md  DESIGN_RATIONALE.md  (+17 more)
(+161 files in other folders)
